# bachelor_thesis

./: CMakeLists.txt  helper_functions.h
benchmark/: benchmark.cxx  benchmark_build.cpp  bm_compression.cxx  bm_load.cxx  bm_tool.cxx  build_seqan_index.cxx
cmd_parser/: CMakeLists.txt  cmd_parser.cpp  cmd_parser.h
fm_index/: CMakeLists.txt  fm_index.cpp  fm_index.h
suffix_array/: CMakeLists.txt  suffix_array.cpp  suffix_array.h
tests/: fm_index_test.cpp  suffix_array_test.cpp  test.cxx
tools/: build_index.cxx  compress_bwt.cxx  convert_sequences.cxx  generate_data.cxx  get_count.cxx  recompress_occ_mat.cxx  recompress_sa.cxx  search.cxx  uncompress_bwt.cxx
